gbsddialog: correct some spelling in the manual page

--- a/doc/gbsddialog.1
+++ b/doc/gbsddialog.1
@@ -893,7 +893,7 @@ Dialogs:
 .Fl Fl treeview ,
 .Fl Fl yesno .
 .Pp
-Some feature differs in input, output, or behavior.
+Some features differ in input, output, or behavior.
 Compatibility is not a priority for future development.
 .Sh THANKS TO
 .An Baptiste Daroussin
