gbsddialog: fix a typo in the manual page

--- a/doc/gbsddialog.1
+++ b/doc/gbsddialog.1
@@ -578,7 +578,7 @@ to hide
 otherwise
 .Dq UNKNOWN .
 .It Fl Fl msgbox Ar text Ar rows Ar cols
-Dialog to diplay a message without the
+Dialog to display a message without the
 .Dq Cancel
 button.
 UP, DOWN, HOME, END, PAGEUP and PAGEDOWN keys are availble to scroll the text.
